--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "scripts": {
     "start": "node json_demo.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/simonprickett/node-redis-json-demo.git"
+  },
   "keywords": [
     "redis"
   ],
